--- a/coffeemud.ini
+++ b/coffeemud.ini
@@ -362,7 +362,8 @@ PLAYERKILL=ALWAYS
 # (expression) The players lost experience is calculated based on the
 #              give math expression, using + - * / (), and using @x1 to
 #              stand for the players level, and @x2 the killers level
-PLAYERDEATH=500
+PLAYERDEATH=500,RETAIN
+
 # MOBDEATH describes what happens to a non-player when they die.
 # The default is DEATH, but you can also use one of the following:
 # DEATH        They die.  They don't come back until they rejuv.
@@ -567,7 +568,7 @@ MAXSTATS=70
 # primary stats (str, int, wis, etc).  This value is modified
 # up or down by class or race and through training or random
 # rolls when a character is created.  The default is 3.
-BASEMINSTAT=3
+BASEMINSTAT=6
 
 # The BASEMAXSTAT value is the base maximum value for all
 # primary stats (str, int, wis, etc).  This value is modified
@@ -581,7 +582,7 @@ BASEMAXSTAT=25
 # <18, <=23, <25, <99 etc.  This  is followed by a space and the number of
 # training sessions it costs to raise the stat to the next point.
 # Default is <18 1, <22 2, <25 3, <99 5
-STATCOSTS=<18 1, <22 2, <25 3, <99 5
+STATCOSTS=<25 1, <30 2, <40 3, <99 4
 
 # The STARTSTAT value is the starting value for all player
 # primary stats (str, int, wis, etc).  This value is modified
@@ -642,7 +643,7 @@ DEITYPOLICY=
 # The LONGLOOK (EXAMINE) command will always show all items,
 # and a value of 0 will disable this feature.  The default
 # value is 5.
-MAXITEMSHOWN=10
+MAXITEMSHOWN=15
 
 # The MAXITEMSWORN tells the system the maximum number of items
 # that can be directly worn, even if the mob has enough wear
@@ -697,7 +698,7 @@ REMORTMASK=-LEVEL +>99
 #  VISITATION to retain room visitation records
 #
 # Default is 100% FACTIONS, 100% QUESTPOINT
-REMORTRETAIN=100% FACTIONS, 100% QUESTPOINT, 50% EXPERTISES, WARRANTS, RACE
+REMORTRETAIN=100% FACTIONS, 100% QUESTPOINT, GENDER, 100% STATS, 100% EXPERTISES, WARRANTS, RACE
 
 # The RACEMIXING string allows you to override the default behavior
 # of the system whereby, when two different races mate through
@@ -713,8 +714,7 @@ REMORTRETAIN=100% FACTIONS, 100% QUESTPOINT, 50% EXPERTISES, WARRANTS, RACE
 # Example: Orc+Human=Gnome,MOTHER Elf+Human=HalfElf|Elf
 # Default is blank.
 RACEMIXING=Elf+Human=HalfElf,Ogre+Giant|Human=HalfOgre,Elf+Drow=Drow,\
-		   Human+Resurgentis=Resurgentis,\
-		   Tiefling+Human=Tiefling,Demon+Tiefling=Demon
+		   Human+Resurgentis=Resurgentis,Tiefling+Human=Tiefling,Demon+Tiefling=Demon
 
 # HUNGER allows one to tweak the game hunger system.  This
 # is a comma-delimited list of 3 numbers.  The first number is
@@ -812,7 +812,7 @@ PRIDECATS=
 # PRIDECOUNT is the maximum number of names to list for each top
 # player/account list maintained by the system.
 # Default is 10
-PRIDECOUNT=10
+PRIDECOUNT=
 
 ######################################################################
 # Ability/Skill related configuration variables
@@ -897,13 +897,17 @@ PRACMAXPCT=95
 # Example: SKILLCOST=1 TRAIN, Spell_Sleep 50*@x1 GOLD
 # The defaults: 1 TRAIN for SKILLCOST, 3 PRACTICES for LANGCOST.
 #               and 1 TRAIN for COMMONCOST.
-#olde
-#COMMONCOST=25*@x1-(10*@x2)>25 XP
-#SKILLCOST=50*@x1-(10*@x2)>50 XP
-#LANGCOST=2500-(10*@x2)>250 XP
-COMMONCOST=1 TRAIN
-SKILLCOST=1 TRAIN
-LANGCOST=1 TRAIN
+COMMONCOST=25*@x1-(10*@x2)>25 XP
+SKILLCOST=50*@x1-(10*@x2)>50 XP
+LANGCOST=2500-(10*@x2)>250 XP
+#
+#COMMONCOST=1000*@x1-(10*@x2)>1000 GOLD
+#SKILLCOST=1 TRAIN
+#LANGCOST=5000-(10*@x2)>1000 GOLD
+#
+#COMMONCOST=1 PRACTICE
+#SKILLCOST=1 TRAIN
+#LANGCOST=1 TRAIN
 
 # WALKCOST AND RUNCOST are the two fields which define the number of
 # movement points required to traverse one room.
@@ -958,7 +962,7 @@ DEFCOMSOCTIME=0.0
 # to be escaped, e.g. \,.
 # Example: Disease_Vampirism=NOSWIM=false,Prop_Adjuster=ATTACK+10
 # Default is nothing
-DEFAULTABILITYARGS=Disease_Vanpirism=NOSWIM=false
+DEFAULTABILITYARGS=
 
 # NEWACODES is a comma delimited list of ability types/codes to add
 # to the official list.  The format is NEW_ACODE, NEW_ACODE2,...
@@ -969,7 +973,7 @@ NEWACODES=SEXUAL
 # the Verb is a present active form of the domain, and the domain name
 # may not contain spaces.
 # Example: TROLL_SKILLS=Trolling, EVILNESS=Evil-Making
-NEWDOMAINS=
+NEWDOMAINS=SEXUAL=Sexual
 
 ######################################################################
 # Start, Death, and Morgue Room Configuration
@@ -1204,7 +1208,7 @@ DEFAULTPARENTAREA=earth
 # sources.  The arguments are identical to those found in the
 # Prop_ModExperience property, so check the HELP on that.
 # Default is empty
-XPMOD=
+XPMOD= *2
 
 ######################################################################
 # Miscellaneous Game related configuration variables
@@ -1229,11 +1233,11 @@ XPMOD=
 #          <90 270 14,\
 #          >=90 0 0
 AUTOPURGE=<2 10 3,\
-          <3 30 5,\
-          <10 90 7,\
-          <30 180 7,\
-          <50 270 14,\
-          >=50 0 0
+		  <3 30 5,\
+		  <10 90 7,\
+		  <20 180 7,\
+		  <30 270 14,\
+		  >=30 0 0
 
 # The ACCOUNTPURGE how long an account will remain in database despite not
 # having any characters (see AUTOPURGE). This time will begin to tick down
@@ -1455,23 +1459,32 @@ ADDWEARLOC_SUBDERMAL=body,0.3,34,0.5,0.7,1.0
 # Some of the above flags cause events to be automatically broadcasted
 # on the given channel.
 CHANNELS=\
-	NEWBIE LIGHTCYAN, DISCORD=intermud-newbie,\
-	MUSIC SAMEAREA READONLY LIGHTPURPLE -EFFECTS "+Property_Neurallink",\
-	RPFINDER BGGREEN WHITE ADDAREA,DISCORD=intermud-rp-finder,\
+	NEWBIE LIGHTCYAN,\
+	DISCORD=intermud-newbie,\
+	MUSIC SAMEAREA READONLY LIGHTPURPLE NOBACKLOG -EFFECTS "+Property_Neurallink",\
+	RPFINDER BGGREEN WHITE ADDAREA,\
+	DISCORD=intermud-rp-finder,\
 	IMPLANT BGRED WHITE SAMEAREA ADDAREA -EFFECTS "+Property_Neurallink",\
-	CHAT BGBLUE LIGHTCYAN ACCOUNTOOC NOLANGUAGE NOMOOD,DISCORD=intermud-chat,\
-	WANTEDNET BGPURPLE WHITE EXECUTIONS WARRANTS PLAYERREADONLY ARCHONREADONLY -EFFECTS "+Property_Neurallink", DISCORD=intermud-alert,\
+	PUBZERO BGRED WHITE -EFFECTS "+Property_Neurallink",\
+	CHAT BGBLUE LIGHTCYAN ACCOUNTOOC NOLANGUAGE NOMOOD,\
+	DISCORD=intermud-chat,\
+	WANTEDNET BGPURPLE WHITE EXECUTIONS WARRANTS PLAYERREADONLY ARCHONREADONLY -EFFECTS "+Property_Neurallink",\
+	DISCORD=intermud-alert,\
 	QUESTCHAT BGBLUE LIGHTCYAN SAMEAREA PLAYERREADONLY,\
 	WIZ -CLASS +PRAETOR +ARCHON,\
 	CLANTALK CLANONLY LOGINS LOGOFFS CONQUESTS CLANINFO -EFFECTS "+Property_Neurallink",\
-	INFO READONLY MARRIAGES NEWPLAYERS,DISCORD=intermud-chat,\
-    LOGINS READONLY LOGINS LOGOFFS,DISCORD=intermud-chat,\
-	WIZINFO READONLY LOGINS LOGOFFS DETAILEDLEVELS DETAILEDDEATHS PLAYERPURGES -ANYCLASS +PRAETOR +ARCHON,DISCORD=intermud-wizinfo,\
+	INFO READONLY MARRIAGES NEWPLAYERS,\
+	DISCORD=intermud-chat,\
+	LOGINS READONLY LOGINS LOGOFFS,\
+	DISCORD=intermud-chat,\
+	WIZINFO READONLY LOGINS LOGOFFS DETAILEDLEVELS DETAILEDDEATHS PLAYERPURGES -ANYCLASS +PRAETOR +ARCHON,\
+	DISCORD=intermud-wizinfo,\
 	BUILDER -CLASS +PRAETOR +ARCHON,\
-	EMERGENCY BGRED YELLOW -CLAN "+Novamed Corporation" "+Phantom City Justice Force" -EFFECTS "+Property_Neurallink", DISCORD=intermud-alert,\
+	EMERGENCY BGRED YELLOW -CLAN "+Novamed Corporation" "+Phantom City Justice Force" -EFFECTS "+Property_Neurallink",\
+	DISCORD=intermud-alert,\
 	HIVEMIND PURPLE -EFFECTS "+Scionness" +OR -RACE +XENO,\
 	CORPO BGGREEN WHITE -TATTOOS +CORPORATE -EFFECTS "+Property_Neurallink",\
-
+	
 
 # COMMANDJOURNALS is a list, separated by commas, as below.
 # These are system journal commands.  The journal names must be
@@ -1513,7 +1526,7 @@ COMMANDJOURNALS=\
 	BUILD CHANNEL=BUILDER ADDROOM=on ADMINECHO=on CONFIRM=on ASSIGN=ALL:,\
 	PKMAIL CHANNEL=WIZINFO ADDROOM=on ADMINECHO=on CONFIRM=on ASSIGN=ALL:,\
 	STAFFMAIL CHANNEL=WIZINFO ADDROOM=on ADMINECHO=on ASSIGN=ALL:,\
-
+	
 # FORUMJOURNALS is a list, separated by commas, as below.
 # These are journals that act as open forums for users, esp on the
 # web site.  After the journal name comes a series of flags and
@@ -1539,7 +1552,7 @@ FORUMJOURNALS=\
 # reading the table of contents of a journal.  This number can be
 # overridden when reading the journal to list older entries.  The
 # default is 10.  0 would be no limit.
-JOURNALLIMIT=0
+JOURNALLIMIT=10
 
 # CHANNELBACKLOG is the maximum number of channels messages for each
 # channel that will be retained in the channel backlog database.
@@ -1673,7 +1686,8 @@ CLANCOST=10000
 # entry that is only a number will serve as a default for all unlisted cats.
 # Example: MAXCLANCATS=ClanCatA 2, ClanCatB 3, 0
 # Default is 1
-MAXCLANCATS=Business 1, settlement 1, competitive 1, other 2, law enforcement 1, religion 1, house 1, family 3, 3
+MAXCLANCATS=Business 1, settlement 1, competitive 1, other 2, law enforcement 1,\
+			religion 1, house 1, family 3, 3
 
 # PUBLICCLANCATS is a comma delimited list of clan government clan
 # categories.  The government categories on this list are available for
@@ -1772,7 +1786,7 @@ MXPIMAGEPATH=http://secretoflife.pocketmud.com:27744/images/mxp
 # * see https://tintin.mudhalla.net/protocols/mssp/ for more information
 # * some variables may be included more than once
 #
-MSXPVARS=GENRE=Fantasy,GAMEPLAY=Adventure,GAMEPLAY=Social
+MSXPVARS=GENRE=Fantasy,GAMEPLAY=Adventure,GAMEPLAY=Social,MINIMUM AGE=18
 
 ######################################################################
 # Default Economy Configuration
@@ -2082,7 +2096,8 @@ ACCMSGS=OFF
 # The default value is COMMAND_POSE, which disables the pose command,
 #    along with QUITREASON and RETIREREASON, which are useless.
 DISABLE=DBERRORQUESTART, QUITREASON, SLOW_AGEING, DEATHCRY, AUTOMOODS, AUTOFORWARD,\
-		FATIGUE, ALLERGIES, AUTOPURGE, HUNGER, THIRST, AUTOLANGUAGE, DIS955RULE, ROOMVISITS
+		FATIGUE, ALLERGIES, AUTOPURGE, HUNGER, THIRST, AUTOLANGUAGE, DIS955RULE,\
+		ROOMVISITS
 
 # The ENABLE flag is for enabling features of the engine which are
 # normally disabled, such as most races, character classes in beta,
@@ -2098,14 +2113,16 @@ DISABLE=DBERRORQUESTART, QUITREASON, SLOW_AGEING, DEATHCRY, AUTOMOODS, AUTOFORWA
 # and wizards.
 # Example: RACE_OGRE, RACE_GNOLL, RACE_SVIRFNEBLIN, RACE_GITHYANKI, RACE_LIZARDMAN,
 # Example: RACE_AARAKOCRAN, RACE_MERFOLK, RACE_PIXIE, RACE_ORC, RACE_MINDFLAYER,
-# Example: RACE_GOBLIN, RACE_CENTAUR
+# Example: RACE_GOBLIN, RACE_CENTAUR, RACE_MINOTAUR
 #
 # Default is blank
 ENABLE=RACE_OGRE, RACE_LIZARDMAN, RACE_MERFOLK, RACE_PIXIE, RACE_ORC, RACE_GOBLIN,\
 	   RACE_CENTAUR, RACE_KOBOLD, RACE_RESURGENTIS, RACE_DRYAD, RACE_DEMON,RACE_DWARF,\
 	   RACE_NYMPH, RACE_KITSUNE, RACE_DROW, RACE_FAERIE, RACE_BEASTKIN,  RACE_NEKOMIMI,\
 	   RACE_ANGEL, RACE_TIEFLING, RACE_SLIMEPERSON, RACE_GNOLL, RACE_LAMIA,RACE_DRACONIAN,\
-	   RACE_MYCONID
+	   RACE_MYCONID, RACE_XENO, RACE_SCLEROTIA, RACE_GHOUL, RACE_ZOMBIE,RACE_GHAST,\
+	   RACE_GHOST, RACE_VAMPIRE, RACE_MUMMY, RACE_GITHYANKI,RACE_CENTAUR, RACE_TROLL,\
+	   RACE_MINDFLAYER, RACE_SHADOW
 
 # The DEBUG flag should be used only by developers who want lots of
 # extra logging in order to fix bugs.  These values are also comma delimited.
@@ -2206,7 +2223,7 @@ DISCORD_JAR_PATH=/lib/javacord-3.9.0-shaded.jar
 # DISCORD_BOT_KEY is for linking discord to one or more channels.
 # It is the secret Bot key you get when you add a Bot to a Discord
 # application on the Discord API web site.
-DISCORD_BOT_KEY=
+DISCORD_BOT_KEY=MTMwNDU2MTQ0MjY1MzA4MTY1Mg.GAw3WK.pgm4QKKEz2z8m-E0QdU0B9-ok7UNClehMbGrg8
 
 ######################################################################
 # Custom Room, MOB, Ability, Exit, etc. Object info
@@ -2331,7 +2348,7 @@ FORMULA_ARMORADJUSTMENT=(@x1-( (((@x2-9)/5)*((@x3-9)/5)*((@x3-9)/5*@x8)) +(@x4*@
 # combat.
 # @x1=attackers level, @x2=defenders level, @x3=@x1>@x2?1:-1
 # Default is: @x3 * (@x1 - @x2)
-FORMULA_ATTACKFUDGEBONUS=@x3 * (@x1 - @x2)
+FORMULA_ATTACKFUDGEBONUS=3 * (@x1 - @x2)
 FORMULA_PVPATTACKFUDGEBONUS=0
 # FORMULA_CHANCESPELLCRIT is the formula for the percent chance that spell damage will
 # yield a critical damage bonus during normal combat.  FORMULA_PVPCHANCESPELLCRIT
