--- a/resources/factions/alignment.ini
+++ b/resources/factions/alignment.ini
@@ -274,6 +274,8 @@ ABILITY28=PALADIN_CRUSHINGAURA;-10000;-4500
 ABILITY29=PALADIN_CRAFTUNHOLYREAVER;-10000;-4500
 ABILITY30=PALADIN_RIGHTEOUSDEFENSE;4501;10000
 ABILITY31=PALADIN_EXPLOITINGAURA;-10000;-4500
+ABILITY32=PALADIN_HOLYMOUNT;4501;10000
+ABILITY33=PALADIN_UNHOLYMOUNT;-10000;-4500
 
 # Affects/Behaviors
 # Adds affects and behaviors to mobs who have this faction (not players).
