--- a/resources/help/newhelp.ini
+++ b/resources/help/newhelp.ini
@@ -1,21 +1,15 @@
-ADVANCED_RACES=Advanced Races are rewarded by archons and are:\n\r\
-(If a tier number next to a race exists it means it needs to be remorted from an already advanced race of one less tier.)\
-\n\r\
-\n\r\
-Deva - Earned over great service to a good deity, a greater angel sort.\n\r\
-\n\r\
-Succubus/Incubus - Achieving questionable yet related things as a `demon` in ways that would get you upgraded to a real sex demon, again it is granted by an archon.\
-\n\r\
-\n\r\
-Intelligent Undead - Much like Liches but weaker, though the person do not need to be a master necromancer, just needs help of a necromancer or have to become an undead and wrangle their control back using their spirit and willpower, and regain themselves in their undead state.\
-\n\r\
-\n\rSylph - Air specialized-ly ascended nymphs, coming with several elemental related abilities and more potential for beauty-wise growth than regular nymphs too.\
-\n\r\
-\n\rSynthetic - Robots with independent AI that runs the body, much like any person but potential to upgrade themselves to be better than the organics.\
-\n\r\n\rWhite Essence Resurgentis - White essence resurgentis are taled to be from the heritage of the god of death himself, besides the legends they are one in a million among the resurgentis and are often taken as royalty.. or extremely expensive prestigious slaves. They are said to be immune to effects of Mind flayers and resistant to mind effects overall, and have extra affinity to undead magic. They are also known to be very talented in things they do with passion most of the time. All of that comes with being at the target board all the time.\
-\n\r\n\rSclerotia - Similiar to Myconid only in the way they are both fungus based, Sclerotia are fungus taken over dead bodies of humanoids that are reanimated in a twisted way such as that. You must die to become this.\
-\n\r\n\rXenomorph - Super-evolved alien creatures with acidic bloodstream. Some may be evolved to get along with other beings.\
-\n\r\n\rEldritch-horror(T2) - Legend says an old god amused itself with mixing different creatures from the past and future in a cauldron of deep magic. The result was eventually discarded, disintegrated and blown away along with the old gods. But rather than dust, it became spores that dispersed through the universe, attaching themselves to living hosts and slowly but surely, taking over.
+ADVANCED_RACES=Advanced Races are gained through remort, by contacting an admin:\
+\n\r(If a tier number next to a race exists it means it needs to be remorted from an already advanced race of one less tier.)\
+\n\r(If a race has ^r*^? Before it`s name, it means it can be switched into at any level, without remort. As long as you are eligible.)\
+\n\r(^r**^? requires a story or a rp in relevance submitted to an archon OR discord rp stories forum channel.)\
+\n\r\n\r**Deva - Earned over great service to a good deity, a greater angel sort.\
+\n\r\n\r**Succubus/Incubus - Achieving questionable yet related things as a `demon` in ways that would get you upgraded to a real sex demon.\
+\n\r\n\rSylph - Air specialized-ly ascended nymphs, coming with several elemental related abilities and more potential for beauty-wise growth than regular nymphs too.\
+\n\r\n\r*Synthetic - Robots with independent AI that runs the body, much like any person but potential to upgrade themselves to be better than the organics.\
+\n\r\n\r*White Essence Resurgentis - White essence resurgentis are taled to be from the heritage of the god of death himself, besides the legends they are one in a million among the resurgentis and are often taken as royalty.. or extremely expensive prestigious slaves. They are said to be immune to effects of Mind flayers and resistant to mind effects overall, and have extra affinity to undead magic. They are also known to be very talented in things they do with passion most of the time. All of that comes with being at the target board all the time.\
+\n\r\n\rEldritch-horror(T2) - Legend says an old god amused itself with mixing different creatures from the past and future in a cauldron of deep magic. The result was eventually discarded, disintegrated and blown away along with the old gods. But rather than dust, it became spores that dispersed through the universe, attaching themselves to living hosts and slowly but surely, taking over.\
+\n\r\n\r*True Vampire - True vampires are not vampires through vampirism but through race, and can not be cured of it through prayer, they are also able to become vampire lords, unlike regular vampires.\
+\n\r\n\r**Elder Lich - A lich who ascended beyond lichdom and immortality, their secrets are well guarded but it is rumored they possess phylacteries that allow them to be rise again even if slain. Their ancient bones, before preservation are often weak, usually their incomprehensible, ancient magical potency protect them from most damage, although their physical form are weak due to being so old despite preservation. Their knowledge and will are boundless... They are also immune to back stabs and sneak attacks due to their lack of vital points and magical defense. However Elder liches can not be polymorphed, their ancient magic imbued form are not possible to change in such a way. To become an elder lich one must discover the secrets of true lichdom and as the name suggests, be atleast a hundred years old, and must have a lair.
 
 PLOT=Command : PLOT\n\r\
 Usage   : PLOT [PLOT MESSAGE]\n\r\
@@ -176,7 +170,8 @@ Allows an user to echo an emote of things such as happenings in the room or back
 RP_SKILLS=RP Skills grant minor coded bonuses and are primarily for getting RP skills to use in well, RP. They do not do much. To prove you have such skill, simply do: ^cprove (full skill name)^N%0DExample: ^cprove like a shadow i^N
 ADVANCED_CLASSES=Tacticaljoy - Sexual experts that learn many related abilities and even some that are special to some classes, and learn the way to do sexual healing more efficently than most.\n\r\n\rInfiltrator - Above the lowly thieves in the streets, specially trained stealth and CQC (close quarters combat) masters though primarily focused to avoid direct confrontation. Usually found working for corporations or freelance for doing things cleanly and without a sound.\n\r\
 \n\r\n\rEngineer - Modern day big brained tinkerers who are able to create modern weapons, bulk and specialized ammunition for specific calibers and generic calibered weapons they can create, also able to do construction and RESTRING items.\
-\n\r\n\rGravecaller - Masters of undeath, the gravecaller is a grandmaster Necromancer who is most likely an undead/lich themselves by now, they learn many spells and prayers to keep a massive undead army marching on strong and.. healthy? At the end of their journey they gain a Necromancer`s visage, a truly terrifying ability to face.
+\n\r\n\rGravecaller - Masters of undeath, the gravecaller is a grandmaster Necromancer who is most likely an undead/lich themselves by now, they learn many spells and prayers to keep a massive undead army marching on strong and.. healthy? At the end of their journey they gain a Necromancer`s visage, a truly terrifying ability to face.\
+\n\r\n\rVampire Lord - An ancient vampire that discovered the secrets of their ancestors and ascended into becoming a vampire lord.
 
 CORPORATE_BRANDS=^bArchercorp^N - Formed by Leonard William Archer. Most likely the oldest corporation to exist, coming from the old world. A weapons and space vessel manufacturer and developing megacorp that build the Space Station Epsilon, still persists to this day. A strangely isolationist corporation.%0D\
 %0D\
@@ -193,7 +188,10 @@ SYLPH=<RACE>\
 Whimsical and unpredicted like a gust of wind, this race of winged nymphs belonging to the element of air tend to make their homes at the tallest trees or the highest peaks where the air is constantly moving and preferably where storms brew. Fae beings of air, they`re quick and light, but lack mass and strength. They are so rare even the legends about their existence are mostly unheard of. Some claim their beauty surpasses even that of nymphs, others say they`re barely humanoid and more of a chaotic air elemental playing illusions on the minds of unlucky mountaineers. Those who claim to have witnessed one, described them as a gorgeous feminine breeze. Caves, confined places and stale air are the dread of sylphs and long exposure to such will harm them.
 
 PLAYER_HOUSING=If there is a residental area, a suitable place in the wilderness or such spot you want to build a home in? Ask an immortal to make you a room you can expand into, the starting room will require ^c30QP^N OR a alot of ^craw materials^N required for a house and an amount of ^clocal currency^N up to the immortal`s discretion, and it will either have a ^crent or maintenance cost monthly^N like any other player housing, however houses in the no man`s land, which require just upkeep will require much less currency per month.\
-^cYou can also ask an immortal to purchase a house to be permanently a characters` for a grand amount of in game money.^N
+^cYou can also ask an immortal to purchase a house to be permanently a characters` for a grand amount of in game money.^N\
+%0D%0D^r(Starting a house costs 3-5QP rather than 30, that must be a mistake.)\
+%0D%0D^r2025 change:^? You can now purchase rental lots with help of an admin at the price of x250 of monthly rent, so if rent of a place is 1500 you`d pay 375k for permanent ownership.\
+%0DYou can contact an admin via TELL or if there is none currently, use BUILD (text) to sent a build request message.
 
 KIDNAP=Kidnapping rules:\
 ^N%0D\
@@ -237,4 +235,15 @@ Removing the claimed room need immortal fixing, let an immortal know after you u
 LUST_RESISTANCE=Lust resistance, while sounds like it gets you less damage in battlefuck, it is just a name for mind save which takes part in not getting affected by mind effects, including battlefuck abilities to begin with. To reduce damage you would need mind damage absorbing things instead.
 ELDRITCH-HORROR=<RACE>Legend says an old god amused itself with mixing different creatures from the past and future in a cauldron of deep magic. The result was eventually discarded, disintegrated and blown away along with the old gods. But rather than dust, it became spores that dispersed through the universe, attaching themselves to living hosts and slowly but surely, taking over.
 ASCII=If messages have ascii art that appear as unknown characters, try turning your client`s server data encoding settings to UTF-8.
-TENTACLE-MONSTER=<RACE>
+TENTACLE-MONSTER=<RACE>\
+A floating, swirling mass of tentacles. One, two… nine of them, three of which have sucky-grabby hand like appendage. They have 3 eyes, usually a larger main one and two peripherals or well, any combination of three. They`re big, they`re massive and as scary as nightmare creatures can be. Their vision is magical in nature, allowing them to see in the darkness, see through invisibility, and detect magic. Their advanced (and twisted) alien mind is immune to mind tricks, while their body has innate regenerative abilities and is immune to gas attacks. They can shapeshift and assume the form of most other races to blend in or for far more sinister reasons. If you encounter one, most likely you`re sadly too late, been nice knowing you, or not. For more visual cues, google images of `ESO Watcher` and `Shuma-Gorath`.
+ELDER_LICH=<RACE>A lich who ascended beyond lichdom and immortality, their secrets are well guarded but it is rumored they possess phylacteries that allow them to be rise again even if slain. Their ancient bones, before preservation are often weak, usually their incomprehensible, ancient magical potency protect them from most damage, although their physical form are weak due to being so old despite preservation. Their knowledge and will are boundless... They are also immune to back stabs and sneak attacks due to their lack of vital points and magical defense. However Elder liches can not be polymorphed, their ancient magic imbued form are not possible to change in such a way. To become an elder lich one must discover the secrets of true lichdom and as the name suggests, be atleast a hundred years old, and must have a lair.\
+\n\r\n\rElder Lich resistances\n\r\
+non magical weapons and non silver weapons 25%\n\r\
+cold 50%\n\r\
+magic 25%\n\r\
+fire -25%\n\r\
+silver -25%\n\r\
+piercing, slashing 50%\n\r
+RACE_SHADOW=<RACE>
+LOOKUP=Lookup is used by neural implants, once you get one you can do LOOKUP HELP to see further commands.
